@@ -1,5 +1,8 @@
 			<< Lingua::AR::Word - Andrea Benazzo >>
 
+29/4/2006	1.5.5
+->now the Makefile requires Perl 5.8.0 instead of 5.8.6
+
 23/4/2006	1.5.4
 ->corrected some errors in the documentation
 ->added todo notice in the stem sub-module
